rabbitmq-test-cluster01-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rabbitmq-test-cluster01
  namespace: rabbitmq
spec:
  host: rabbitmq-test-cluster01-rabbitmq.epical-test-35478b8a1f2793ad207bc2eca8dccf01-i000.eu-de.containers.appdomain.cloud
  path: /
  to:
    name: rabbitmq-test-cluster01
    weight: 100
    kind: Service
  tls: null
  port:
    targetPort: management
